# dmarc_aggregate_parser

./: .gitignore  Cargo.toml  LICENSE  README.md
sample-data/: dmarc.xml
src/: aggregate_report.rs  error_handling.rs  lib.rs
