[package]
name = "dmarc_aggregate_parser"
version = "0.1.0"
authors = ["Brian Bustin <brian@bustin.us>"]
edition = "2018"
description = "Simple library to parse email DMARC reports"
repository = "https://github.com/bbustin/dmarc_aggregate_parser"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.3"
libflate = "0.1"
zip = "0.5"